hphp/test/zend/good/Zend/tests/cast_to_int.php.expectf
int(0)
int(8754456)
int(0)
int(0)
int(9876545)
int(0)
int(0)
int(1)
int(0)
int(1)
int(0)
int(%d)

Fatal error: Uncaught exception 'TypecastException' with message 'Object of class test could not be converted to int' in %s/cast_to_int.php:30
Stack trace:
#0 (): main()
#1 {main}
